--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <section id="home">
             <div class="container">
                 <h2>Seja bem-vindo ao clube de RPG!</h2>
-                <p>Sessões toda quarta, das 12:50 até 16:30.</p>
+                <p>Sessões toda quarta, das 12:50 até 15:30.</p>
             </div>
         </section>
 
@@ -44,7 +44,7 @@
                     <h3>A Tecelagem — Mesa 1</h3>
                     <p>O mundo é afetado por um fenômeno que transforma metade da população em feiticeiros. Agora,
                         estudantes da Escola Jujutsu de Tóquio devem navegar por este mundo novo e bizarro.</p>
-                    <button class="learn-more-btn">Informações</button>
+                    <button class="info">Informações</button>
                     <div class="additional-content">
                         <ul>
                             <li><strong>Sistema:</strong> Feiticeiros & Maldições (2.0)</li>
@@ -55,14 +55,14 @@
                     </div>
                 </div>
                 <div class="campaign">
-                    <h3>[Campanha D&D] — Mesa 2</h3>
+                    <h3>TBD — Mesa 2</h3>
                     <p>Descrição</p>
-                    <button class="learn-more-btn">Informações</button>
+                    <button class="info">Informações</button>
                     <div class="additional-content">
                         <ul>
-                            <li><strong>Sistema:</strong> Dungeons & Dragons</li>
-                            <li><strong>Estilo:</strong> cara só ouvi coisa bizarra dessa campanha</li>
-                            <li><strong>Vagas estimadas:</strong> 3/?</li>
+                            <li><strong>Sistema:</strong> TBD</li>
+                            <li><strong>Estilo:</strong> TBD</li>
+                            <li><strong>Vagas estimadas:</strong> ?/?</li>
                             <li><strong>Nível atual:</strong> Nível ?</li>
                         </ul>
                     </div>
@@ -70,11 +70,11 @@
                 <div class="campaign">
                     <h3>[Campanha Ordem Paranormal] — Mesa 3</h3>
                     <p>Descrição</p>
-                    <button class="learn-more-btn">Informações</button>
+                    <button class="info">Informações</button>
                     <div class="additional-content">
                         <ul>
                             <li><strong>Sistema:</strong> Ordem Paranormal RPG</li>
-                            <li><strong>Estilo:</strong> </li>
+                            <li><strong>Estilo:</strong> TBD</li>
                             <li><strong>Vagas estimadas:</strong> 5/?</li>
                             <li><strong>Nível atual:</strong> NEX ?%</li>
                         </ul>
@@ -109,18 +109,6 @@
     </footer>
     </main>
 
-    <script src="script.js">
-        // Get all buttons with the class 'learn-more-btn'
-        const buttons = document.querySelectorAll('.learn-more-btn');
-
-        // Loop through each button and add an event listener
-        buttons.forEach(button => {
-            button.addEventListener('click', () => {
-                // Toggle the 'active' class on the parent .campaign div
-                const campaign = button.closest('.campaign');
-                campaign.classList.toggle('active');
-            });
-        });
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
