--- a/index.html
+++ b/index.html
@@ -68,15 +68,15 @@
                     </div>
                 </div>
                 <div class="campaign">
-                    <h3>[Campanha Ordem Paranormal] — Mesa 3</h3>
+                    <h3>Campanha de Ordem Paranormal — Mesa 3</h3>
                     <p>Descrição</p>
                     <button class="info">Informações</button>
                     <div class="additional-content">
                         <ul>
                             <li><strong>Sistema:</strong> Ordem Paranormal RPG</li>
-                            <li><strong>Estilo:</strong> TBD</li>
-                            <li><strong>Vagas estimadas:</strong> 5/?</li>
-                            <li><strong>Nível atual:</strong> NEX ?%</li>
+                            <li><strong>Estilo:</strong> Comédia, mistério e terror psicológico</li>
+                            <li><strong>Vagas estimadas:</strong> Fechada</li>
+                            <li><strong>Nível atual:</strong> NEX 40%</li>
                         </ul>
                     </div>
                 </div>
@@ -89,9 +89,9 @@
                 <p><strong>Email:</strong> <a href="mailto:piorparty312@gmail.com">piorparty312@gmail</a></p>
                 <p><strong>Whatsapp:</strong></p>
                 <ul>
+                    <li>+55 (11) 91141-4077</li>
                     <li>+55 (11) 97015-3824</li>
-                    <li>----</li>
-                    <li>----</li>
+                    <li>+55 (11) 99395-6902</li>
                 </ul>
             </div>
         </section>
