--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </div>
                 <div class="campaign">
                     <h3>Campanha de Ordem Paranormal — Mesa 3</h3>
-                    <p>Descrição</p>
+                    <p>Uma história sobre as filosofias do destino, e sobre entender a essência de si mesmo e sua própria força.</p>
                     <button class="info">Informações</button>
                     <div class="additional-content">
                         <ul>
